tdf#96368: Address book wizard with no selection returns Evolution

Don't select an option which is not even visible

Change-Id: I003c835d7d623e559d67098de48efdf057a64422
Reviewed-on: https://gerrit.libreoffice.org/20552
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 7b69dd64be71d1420158a553fb5ec861039cb017)
Reviewed-on: https://gerrit.libreoffice.org/20558
Tested-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 6158def661f8281c4fc3493c7e2a1753d3891437)
Reviewed-on: https://gerrit.libreoffice.org/20559
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>